--- a/inetpub/wwwroot/ServicesMvc/ServicesMvc.csproj
+++ b/inetpub/wwwroot/ServicesMvc/ServicesMvc.csproj
@@ -2950,6 +2950,7 @@
     <Content Include="Views\Uebfuehrg\Partial\ProtokollUpload.cshtml" />
     <Content Include="Views\Equi\Historie\Partial\StuecklistenGrid.cshtml" />
     <Content Include="Views\CocSendung\VerfolgungMulti\Fin\Suche.cshtml" />
+    <Content Include="Views\CocSendung\VerfolgungMulti\Fin\Grid.cshtml" />
     <None Include="Web.config">
       <SubType>Designer</SubType>
     </None>
