--- a/inetpub/wwwroot/ServicesMvc/ServicesMvc.csproj
+++ b/inetpub/wwwroot/ServicesMvc/ServicesMvc.csproj
@@ -843,7 +843,7 @@
     <Content Include="Areas\Common\Views\Dashboard\Index.cshtml" />
     <Content Include="Areas\Common\Views\Dashboard\Partial\Common.cshtml" />
     <Content Include="Areas\Common\Views\Dashboard\Partial\ChartJsonDataCustomizingScripts.cshtml" />
-	<Content Include="Areas\Autohaus\Views\Zulassung\Partial\ZulassungsdatenFormAnmeldung.cshtml" />
+    <Content Include="Areas\Autohaus\Views\Zulassung\Partial\ZulassungsdatenFormAnmeldung.cshtml" />
     <None Include="assets\img\bg-white-lock-header.psd" />
     <Content Include="Documents\Templates\UploadFahrzeugdaten.csv">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
@@ -2955,6 +2955,7 @@
     <Content Include="Views\Haendler\Partial\Grid.cshtml" />
     <Content Include="Views\Haendler\Partial\Suche.cshtml" />
     <Content Include="Views\Uebfuehrg\Partial\ProtokollUpload.cshtml" />
+    <Content Include="Views\ZldPartner\DurchzufuehrendeZulassungen\StornoDialogForm.cshtml" />
     <None Include="Web.config">
       <SubType>Designer</SubType>
     </None>
