--- a/Work/CkgDomainLogic/CkgImportLocalizationResourcesFromDb/CkgImportLocalizationResourcesFromDb/CkgImportLocalizationResourcesFromDb.csproj
+++ b/Work/CkgDomainLogic/CkgImportLocalizationResourcesFromDb/CkgImportLocalizationResourcesFromDb/CkgImportLocalizationResourcesFromDb.csproj
@@ -58,6 +58,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DomainDbContext.cs" />
+    <Compile Include="GeneralConfiguration.cs" />
     <Compile Include="ModelMapping.cs" />
     <Compile Include="ConfigAllServers.cs" />
     <Compile Include="TranslatedResourceCustom.cs" />
@@ -69,12 +70,6 @@
     <None Include="app.config">
       <SubType>Designer</SubType>
     </None>
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\..\..\Tools\GeneralTools\GeneralTools.csproj">
-      <Project>{a4f36243-8d89-460f-acb3-ef7df37d6fca}</Project>
-      <Name>GeneralTools</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
