--- a/inetpub/wwwroot/PortalZLD/PortalZLD.vbproj
+++ b/inetpub/wwwroot/PortalZLD/PortalZLD.vbproj
@@ -473,6 +473,7 @@
     <Content Include="Images\kroschkeBridge.jpg" />
     <Content Include="Images\kroschkeBridge1.jpg" />
     <Content Include="Images\kroschkeTrans.jpg" />
+    <Content Include="Images\kroschke_inside_logo.png" />
     <Content Include="Images\Kunden.png" />
     <Content Include="Images\Lautstaerke_09.jpg" />
     <Content Include="Images\Lautstaerke_10.jpg" />
