--- a/inetpub/wwwroot/Services/Components/Logistik/Logistik.vbproj
+++ b/inetpub/wwwroot/Services/Components/Logistik/Logistik.vbproj
@@ -279,6 +279,7 @@
     </Compile>
     <Compile Include="Change02sUserControls\TransportAddress.ascx.vb">
       <DependentUpon>TransportAddress.ascx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
     </Compile>
     <Compile Include="Change02sUserControls\WSDienstleistungen.ascx.designer.vb">
       <DependentUpon>WSDienstleistungen.ascx</DependentUpon>
@@ -313,6 +314,7 @@
     </Compile>
     <Compile Include="Change02sUserControls\ZusatzDienstleistungen.ascx.vb">
       <DependentUpon>ZusatzDienstleistungen.ascx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
     </Compile>
     <Compile Include="Change02sUserControls\Zusatzfahrten.ascx.designer.vb">
       <DependentUpon>Zusatzfahrten.ascx</DependentUpon>
