Neue Anwendung "Unzugelassene Fahrzeuge"

--- a/Work/CkgDomainLogic/CkgDomainLeasing/CkgDomainLeasing.csproj
+++ b/Work/CkgDomainLogic/CkgDomainLeasing/CkgDomainLeasing.csproj
@@ -74,6 +74,7 @@
     <Compile Include="Controllers\NichtDurchfuehrbareZulassungen\LeasingController.cs" />
     <Compile Include="Controllers\Sicherungsscheine\LeasingController.cs" />
     <Compile Include="Controllers\UeberfaelligeRuecksendungen\LeasingController.cs" />
+    <Compile Include="Controllers\UnzugelasseneFahrzeuge\LeasingController.cs" />
     <Compile Include="Controllers\UnzugelFzge\LeasingController.cs" />
     <Compile Include="Controllers\ZB1Kopien\LeasingController.cs" />
     <Compile Include="Leasing\Contracts\ILeasingCargateCsvUploadDataService.cs" />
@@ -84,10 +85,12 @@
     <Compile Include="Leasing\Contracts\ILeasingSicherungsscheineDataService.cs" />
     <Compile Include="Leasing\Contracts\INichtDurchfuehrbZulDataService.cs" />
     <Compile Include="Leasing\Contracts\IUeberfaelligeRuecksendungenDataService.cs" />
+    <Compile Include="Leasing\Contracts\IUnzugelasseneFahrzeugeDataService.cs" />
     <Compile Include="Leasing\Models\DataModels\Abmeldedaten.cs" />
     <Compile Include="Leasing\Models\DataModels\Klaerfall.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Leasing\Models\DataModels\UnzugelassenesFahrzeug.cs" />
     <Compile Include="Leasing\Models\DataModels\UeberfaelligeRuecksendung.cs" />
     <Compile Include="Leasing\Models\DataModels\NichtDurchfuehrbareZulassung.cs" />
     <Compile Include="Leasing\Models\DataModels\Sicherungsschein.cs" />
@@ -95,11 +98,13 @@
     <Compile Include="Leasing\Models\DataModels\UnzugelFzg.cs" />
     <Compile Include="Leasing\Models\DataModels\ZB1Kopie.cs" />
     <Compile Include="Leasing\Models\AppModelMappings.cs" />
+    <Compile Include="Leasing\Models\UIModels\EquiBemerkungErfassenModel.cs" />
     <Compile Include="Leasing\Models\UIModels\KlaerfallSuchparameter.cs" />
     <Compile Include="Leasing\Models\UIModels\KlaerfallSucheArtFehlendeDaten.cs" />
     <Compile Include="Leasing\Models\UIModels\UeberfaelligeRuecksendungenSuchparameter.cs" />
     <Compile Include="Leasing\Models\UIModels\ZB1KopieSucheKunde.cs" />
     <Compile Include="Leasing\Models\UIModels\ZB1KopieSuchparameter.cs" />
+    <Compile Include="Leasing\Services\UnzugelasseneFahrzeugeDataServiceSAP.cs" />
     <Compile Include="Leasing\Services\UeberfaelligeRuecksendungenDataServiceSAP.cs" />
     <Compile Include="Leasing\Services\NichtDurchfuehrbZulDataServiceSAP.cs" />
     <Compile Include="Leasing\Services\LeasingSicherungsscheineDataServiceSAP.cs" />
@@ -108,6 +113,7 @@
     <Compile Include="Leasing\Services\LeasingAbmeldungDataServiceSAP.cs" />
     <Compile Include="Leasing\Services\LeasingUnzugelFzgDataServiceSAP.cs" />
     <Compile Include="Leasing\Services\LeasingZB1KopienDataServiceSAP.cs" />
+    <Compile Include="Leasing\ViewModels\UnzugelasseneFahrzeugeViewModel.cs" />
     <Compile Include="Leasing\ViewModels\UeberfaelligeRuecksendungenViewModel.cs" />
     <Compile Include="Leasing\ViewModels\NichtDurchfuehrbZulViewModel.cs" />
     <Compile Include="Leasing\ViewModels\LeasingSicherungsscheineViewModel.cs" />
