--- a/inetpub/wwwroot/ServicesMvc/ServicesMvc.csproj
+++ b/inetpub/wwwroot/ServicesMvc/ServicesMvc.csproj
@@ -2953,6 +2953,9 @@
     <Content Include="Views\Fahrzeuge\Floorcheck\FloorcheckSuche.cshtml" />
     <Content Include="Views\Fahrzeuge\ReportFloorcheck.cshtml" />
     <Content Include="Views\Fahrzeuge\Floorcheck\FloorcheckSuche2.cshtml" />
+    <Content Include="Views\Leasing\UnzugelasseneFahrzeuge\Grid.cshtml" />
+    <Content Include="Views\Leasing\UnzugelasseneFahrzeuge\BemerkungErfassenAendernForm.cshtml" />
+    <Content Include="Views\Leasing\UnzugelasseneFahrzeuge.cshtml" />
     <None Include="Web.config">
       <SubType>Designer</SubType>
     </None>
