--- a/Work/CarDocu/lib/CarDocuLib.csproj
+++ b/Work/CarDocu/lib/CarDocuLib.csproj
@@ -66,6 +66,7 @@
     <Compile Include="Models\Archive.cs" />
     <Compile Include="Models\DocumentType.cs" />
     <Compile Include="Models\DocumentTypeInputRule.cs" />
+    <Compile Include="Models\AppDomain.cs" />
     <Compile Include="Models\DomainLocation.cs" />
     <Compile Include="Models\DomainUser.cs" />
     <Compile Include="Models\DocumentTypeWebServiceFunction.cs" />
