--- a/inetpub/wwwroot/PortalZLD/PortalZLD.vbproj
+++ b/inetpub/wwwroot/PortalZLD/PortalZLD.vbproj
@@ -301,6 +301,14 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Customize\DAD\BannerBack.jpg" />
+    <Content Include="Customize\DAD\dadlogo.jpg" />
+    <Content Include="Customize\DAD\TableAlternate.jpg" />
+    <Content Include="Customize\DAD\TableBack.jpg" />
+    <Content Include="Customize\DAD\TaskTitleBack.jpg" />
+    <Content Include="Customize\DAD\volvo.css" />
+    <Content Include="Customize\DAD\volvoE6.css" />
+    <Content Include="Customize\DAD\volvoIE6.css" />
     <Content Include="Images\%40_10.jpg" />
     <Content Include="Images\addfromleft.png" />
     <Content Include="Images\Admin.png" />
@@ -488,6 +496,23 @@
     <Content Include="Images\login.jpg" />
     <Content Include="Images\loginHeader.jpg" />
     <Content Include="Images\loginHeader_blue.jpg" />
+    <Content Include="Images\Logistik\arrowdown.png" />
+    <Content Include="Images\Logistik\arrowup.png" />
+    <Content Include="Images\Logistik\BackDetails - Kopie.png" />
+    <Content Include="Images\Logistik\BackDetails.png" />
+    <Content Include="Images\Logistik\delete.jpg" />
+    <Content Include="Images\Logistik\delete.png" />
+    <Content Include="Images\Logistik\edit.png" />
+    <Content Include="Images\Logistik\loesch.gif" />
+    <Content Include="Images\Logistik\plusgreen.png" />
+    <Content Include="Images\Logistik\save.png" />
+    <Content Include="Images\Logistik\savegreen.png" />
+    <Content Include="Images\Logistik\StandardBlueDL.png" />
+    <Content Include="Images\Logistik\StandardBlueTour.png" />
+    <Content Include="Images\Logistik\StandardGreyDL.png" />
+    <Content Include="Images\Logistik\StandardGreyTour.png" />
+    <Content Include="Images\Logistik\StandardReadyDL.png" />
+    <Content Include="Images\Logistik\StandardReadyTour.png" />
     <Content Include="Images\logoDAD.jpg" />
     <Content Include="Images\logoDADTrans.jpg" />
     <Content Include="Images\logoGenerali.jpg" />
@@ -679,6 +704,38 @@
     <Content Include="Images\User01_06.jpg" />
     <Content Include="Images\User02_06.jpg" />
     <Content Include="Images\user_Hover.png" />
+    <Content Include="Images\Versand\headopen.png" />
+    <Content Include="Images\Versand\headopenoverflow.png" />
+    <Content Include="Images\Versand\headSucheopen.png" />
+    <Content Include="Images\Versand\minusred.png" />
+    <Content Include="Images\Versand\overflowbackwhite.png" />
+    <Content Include="Images\Versand\plusgreen.png" />
+    <Content Include="Images\Versand\search.png" />
+    <Content Include="Images\Versand\StandardBlueAdresse.png" />
+    <Content Include="Images\Versand\StandardBlueOptionen.png" />
+    <Content Include="Images\Versand\StandardBlueOverview.png" />
+    <Content Include="Images\Versand\StandardBlueStift.png" />
+    <Content Include="Images\Versand\StandardGreyAdresse.png" />
+    <Content Include="Images\Versand\StandardGreyOptionen.png" />
+    <Content Include="Images\Versand\StandardGreyOverview.png" />
+    <Content Include="Images\Versand\StandardGreyStift.png" />
+    <Content Include="Images\Versand\StandardGreyTool.png" />
+    <Content Include="Images\Versand\StandardReadyAdresse.png" />
+    <Content Include="Images\Versand\StandardReadyOptionen.png" />
+    <Content Include="Images\Versand\StandardReadyOverview.png" />
+    <Content Include="Images\Versand\StandardReadyStift.png" />
+    <Content Include="Images\Versand\StandardReadyTool.png" />
+    <Content Include="Images\Versand\StandardRedAdresse.png" />
+    <Content Include="Images\Versand\StandardRedOtionen.png" />
+    <Content Include="Images\Versand\StandardRedOverview.png" />
+    <Content Include="Images\Versand\StandardRedStift.png" />
+    <Content Include="Images\Versand\StandardRedTool.png" />
+    <Content Include="Images\Versand\stephead.png" />
+    <Content Include="Images\Versand\Stepheadopen.png" />
+    <Content Include="Images\Versand\Stepheadoverflow.png" />
+    <Content Include="Images\Versand\suche.png" />
+    <Content Include="Images\Versand\suche2.png" />
+    <Content Include="Images\Versand\Uploadoverflow.png" />
     <Content Include="Images\Verwaltung.png" />
     <Content Include="Images\vkb_logo.jpg" />
     <Content Include="Images\Wappen01_10.jpg" />
@@ -705,6 +762,22 @@
     <Content Include="Start\Log.aspx" />
     <Content Include="MasterPage\Services.Master" />
     <Content Include="MasterPage\Design.Master" />
+    <Content Include="Docs\Lastschrift\Baden-Wuerttemberg.pdf" />
+    <Content Include="Docs\Lastschrift\Bayern.pdf" />
+    <Content Include="Docs\Lastschrift\Berlin.pdf" />
+    <Content Include="Docs\Lastschrift\Brandenburg.pdf" />
+    <Content Include="Docs\Lastschrift\Bremen.pdf" />
+    <Content Include="Docs\Lastschrift\Hamburg.pdf" />
+    <Content Include="Docs\Lastschrift\Hessen.pdf" />
+    <Content Include="Docs\Lastschrift\Mecklenburg-Vorpommern1.pdf" />
+    <Content Include="Docs\Lastschrift\Mecklenburg-Vorpommern2.pdf" />
+    <Content Include="Docs\Lastschrift\Niedersachsen.pdf" />
+    <Content Include="Docs\Lastschrift\Nordrhein-Westfalen.pdf" />
+    <Content Include="Docs\Lastschrift\Rheinland-Pfalz.pdf" />
+    <Content Include="Docs\Lastschrift\Saarland.pdf" />
+    <Content Include="Docs\Lastschrift\Sachsen.pdf" />
+    <Content Include="Docs\Lastschrift\Schleswig-Holstein.pdf" />
+    <Content Include="Docs\Lastschrift\Thueringen.pdf" />
     <None Include="My Project\Application.myapp">
       <Generator>MyApplicationCodeGenerator</Generator>
       <LastGenOutput>Application.Designer.vb</LastGenOutput>
@@ -717,6 +790,9 @@
     <Content Include="Menue\Menu.ascx" />
     <Content Include="Start\Mvc.aspx" />
     <Content Include="Styles\defaultAH.css" />
+    <Content Include="Styles\default_BigIE6.css" />
+    <Content Include="Styles\js\images\arrows-ffffff.png" />
+    <Content Include="Styles\js\images\shadow.png" />
     <Content Include="Styles\js\images\ui-bg_flat_0_aaaaaa_40x100.png" />
     <Content Include="Styles\js\images\ui-bg_flat_75_ffffff_40x100.png" />
     <Content Include="Styles\js\images\ui-bg_glass_55_fbf9ee_1x400.png" />
@@ -736,6 +812,7 @@
     <Content Include="Styles\js\jquery.ui.base.css" />
     <Content Include="Styles\js\jquery.ui.core.css" />
     <Content Include="Styles\js\jquery.ui.theme.css" />
+    <Content Include="Styles\js\superfish.css" />
     <Content Include="Styles\RadGridStyle.css" />
     <Content Include="Web.config">
       <SubType>Designer</SubType>
@@ -796,8 +873,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Images\Logistik\" />
-    <Folder Include="Images\Versand\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\..\Work\Tools\GeneralTools\GeneralTools.csproj">
@@ -842,15 +917,15 @@
       <FilesForPackagingFromProject Include="%(_Bin.Identity)">
         <DestinationRelativePath>bin\%(Filename)%(Extension)</DestinationRelativePath>
       </FilesForPackagingFromProject>
-	<_AppZulassungsdienst Include="Applications\AppZulassungsdienst\**\*.aspx;Applications\AppZulassungsdienst\**\*.ascx;Applications\AppZulassungsdienst\**\*.master;Applications\AppZulassungsdienst\**\*.js;Applications\AppZulassungsdienst\**\*.css;Applications\AppZulassungsdienst\**\*.doc;Applications\AppZulassungsdienst\**\*.pdf;Applications\AppZulassungsdienst\**\*.xls;Applications\AppZulassungsdienst\**\*.htm;Applications\AppZulassungsdienst\**\*.asmx;Applications\AppZulassungsdienst\**\*.htc;Applications\AppZulassungsdienst\**\Templates\*.xml;Applications\AppZulassungsdienst\**\*.png;Applications\AppZulassungsdienst\**\*.asax" />
-    <FilesForPackagingFromProject Include="%(_AppZulassungsdienst.Identity)">
-		<DestinationRelativePath>Applications\AppZulassungsdienst\%(RecursiveDir)%(Filename)%(Extension)</DestinationRelativePath>
-	</FilesForPackagingFromProject>
-	<_MvcAppZulassungsdienst Include="Applications\MvcAppZulassungsdienst\**\*.aspx;Applications\MvcAppZulassungsdienst\**\*.ascx;Applications\MvcAppZulassungsdienst\**\*.master;Applications\MvcAppZulassungsdienst\**\*.js;Applications\MvcAppZulassungsdienst\**\*.css;Applications\MvcAppZulassungsdienst\**\*.doc;Applications\MvcAppZulassungsdienst\**\*.pdf;Applications\MvcAppZulassungsdienst\**\*.xls;Applications\MvcAppZulassungsdienst\**\*.htm;Applications\MvcAppZulassungsdienst\**\*.asmx;Applications\MvcAppZulassungsdienst\**\*.htc;Applications\MvcAppZulassungsdienst\**\*.png;Applications\MvcAppZulassungsdienst\**\*.asax;Applications\MvcAppZulassungsdienst\**\Templates\*.xml" />
-    <FilesForPackagingFromProject Include="%(_MvcAppZulassungsdienst.Identity)">
-		<DestinationRelativePath>Applications\MvcAppZulassungsdienst\%(RecursiveDir)%(Filename)%(Extension)</DestinationRelativePath>
-	</FilesForPackagingFromProject>	
-	</ItemGroup>
+      <_AppZulassungsdienst Include="Applications\AppZulassungsdienst\**\*.aspx;Applications\AppZulassungsdienst\**\*.ascx;Applications\AppZulassungsdienst\**\*.master;Applications\AppZulassungsdienst\**\*.js;Applications\AppZulassungsdienst\**\*.css;Applications\AppZulassungsdienst\**\*.doc;Applications\AppZulassungsdienst\**\*.pdf;Applications\AppZulassungsdienst\**\*.xls;Applications\AppZulassungsdienst\**\*.htm;Applications\AppZulassungsdienst\**\*.asmx;Applications\AppZulassungsdienst\**\*.htc;Applications\AppZulassungsdienst\**\Templates\*.xml;Applications\AppZulassungsdienst\**\*.png;Applications\AppZulassungsdienst\**\*.asax" />
+      <FilesForPackagingFromProject Include="%(_AppZulassungsdienst.Identity)">
+        <DestinationRelativePath>Applications\AppZulassungsdienst\%(RecursiveDir)%(Filename)%(Extension)</DestinationRelativePath>
+      </FilesForPackagingFromProject>
+      <_MvcAppZulassungsdienst Include="Applications\MvcAppZulassungsdienst\**\*.aspx;Applications\MvcAppZulassungsdienst\**\*.ascx;Applications\MvcAppZulassungsdienst\**\*.master;Applications\MvcAppZulassungsdienst\**\*.js;Applications\MvcAppZulassungsdienst\**\*.css;Applications\MvcAppZulassungsdienst\**\*.doc;Applications\MvcAppZulassungsdienst\**\*.pdf;Applications\MvcAppZulassungsdienst\**\*.xls;Applications\MvcAppZulassungsdienst\**\*.htm;Applications\MvcAppZulassungsdienst\**\*.asmx;Applications\MvcAppZulassungsdienst\**\*.htc;Applications\MvcAppZulassungsdienst\**\*.png;Applications\MvcAppZulassungsdienst\**\*.asax;Applications\MvcAppZulassungsdienst\**\Templates\*.xml" />
+      <FilesForPackagingFromProject Include="%(_MvcAppZulassungsdienst.Identity)">
+        <DestinationRelativePath>Applications\MvcAppZulassungsdienst\%(RecursiveDir)%(Filename)%(Extension)</DestinationRelativePath>
+      </FilesForPackagingFromProject>
+    </ItemGroup>
   </Target>
   <PropertyGroup>
     <OnBeforePackageUsingManifest>AddCustomSkipRules</OnBeforePackageUsingManifest>
